# F23-Reinforcement-Learning

./: .gitignore  README.md  all_requirements.txt  pyproject.toml  pytorch_tutorial.ipynb  requirements.txt  test-setup.py
human-feedback/: main.py  pseudo-code.md  reinforceAgent.py  rewardPredictor.py  simulation.py
human-feedback/weights/: first_weights.h1
rlhf/: _types.py  discriminator.py  reinforce.py  reward_estimator.py
solutions/: dp-tutorial-soln.py  mc-tutorial-soln.py
solutions/REINFORCE-soln/: main.py  policy_demo.py  reinforceAgent_soln.py
solutions/REINFORCE-soln/weights/: reinforce_good_weights.h5
tutorials/: dp-tutorial.py  gridworld.py  mc-tutorial.py
tutorials/REINFORCE/: discount_test.py  main.py  policy_demo.py  reinforceAgent.py  rewardPredictor.py
tutorials/REINFORCE/weights/: reinforce_weights.h5
